Auth and refresh (#98)
* auth token

* review stash

* configurable ui repo refresh rate

* fix blocking QC api request

* typst formatting

* issue closer + preview height

* specify collaborators

* clear collaborators on file change

* configurable collaborators

* update tests
